# decoupled-llm-safety-3

./: .gitignore
decoupled-safety-kernel/: Cargo.toml  environment.yml  requirements.txt
decoupled-safety-kernel/llm_user_space/: __init__.py  deepseek_client.py  env_loader.py  execution_context.py  gateway_mirror.py  next_token_adapter.py
decoupled-safety-kernel/paper_eval/: README.md
decoupled-safety-kernel/rfc_contracts/: decoupled-safety-kernel.lnk
decoupled-safety-kernel/scripts/: e2e_full_chain.py  export_trackA_table_tex.py  install_git_hooks.sh  live_fire_benchmark.py  mmap_adapter.py  run_trackA_harness.py  setup_workspace.sh  verify_all.sh  verify_ssot_compliance.py
decoupled-safety-kernel/src_kernel/: Cargo.toml
decoupled-safety-kernel/src_kernel/src/: algebraic_composer.rs  axiom_hive_solver.rs  capability_tracker.rs  evidence_chain_audit.rs  execution_context.rs  graceful_degradation.rs  graceful_degradation_fsm.rs  ipc_mmap_bridge.rs  judge_ensemble.rs  lib.rs  solver_ladder.rs
decoupled-safety-kernel/src_kernel/src/gateway/: gateway_filter.rs  mod.rs
decoupled-safety-kernel/src_kernel/tests/: e2e_v01.rs
papers/: ArchitecturalReconstruction_ControlledMutation.bib  BeyondModelReflection_DecoupledSafety_CN.tex  Decoupled Safety Kernel Architecture RFC_v0.2_r2.md  Step1-理论部分.md  [0409-1]review.md  [0410-1]review.md  [0410-1]revision_response.md  [0410-2]revision_response.md  [0410-2]round2-review.md  [0410-3]revision_response.md  [0410-3]round3-review.md  [0410-4]revision_response.md  [0410-4]round4-review.md  _stub_fig.tex
(+102 files in other folders)
